--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,7 +3,7 @@
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_margin="8dp"
     android:padding="8dp"
     cardView:cardCornerRadius="8dp"
     cardView:cardElevation="8dp">
@@ -16,25 +16,25 @@
 
         <TextView
             android:id="@+id/txtTitle"
+            android:textColor="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtPubDate"
+            android:textColor="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="2017-05-03 12:30:00"
             android:textSize="12sp"
             android:textStyle="italic" />
 
         <TextView
             android:id="@+id/txtContent"
+            android:textColor="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Content"
             android:textSize="12sp"
             android:textStyle="normal" />
     </LinearLayout>
