--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -13,7 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="vertical">
-
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:contentDescription="@string/thumbnail_desc"
+            android:id="@+id/postImage"/>
         <TextView
             android:id="@+id/txtTitle"
             android:textColor="@android:color/black"
